[package]
name = "yoomoney"
version = "0.1.0"
description = "YooMoney API library"
categories = ["api"]
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
http = "0.2"
itertools = "0.11"
log = "0.4"
maplit = "1"
phonenumber = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
